<resources>
    <string name="app_name">CalorieTrackerFullStack</string>

    <string name="error_message">Oh dear we are unable to fetch random user for you. Maybe your not connected with internet!</string>
    <string name="retry">Retry</string>
    <string name="random_user_detail_header">Detail Info about Random User </string>
    <string name="submit">Submit</string>
    <string name="Food_Photo">Food Picture</string>
    <string name="saved_isAdmin">isAdmin</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="username">Username</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_calorie_tracker">Welcome to Calorie Tracker</string>
    <string name="sandwich_is_a_good_food_and_we_can_eat_it_well">Sandwich is a good food and we can eat it well.</string>
    <string name="sample_text">1006777667887878787</string>
    <string name="date_sample">12/12/2022</string>
    <string name="time_sample">08:30PM</string>
    <string name="report">Report</string>
    <string name="back">Back</string>
    <string name="admin_report">Admin Report</string>
    <string name="number_of_added_entries_week_before">Number of added entries week before</string>
    <string name="text_100">100</string>
    <string name="text_0">0</string>
    <string name="calories">Calories</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="max_calories">You have reached \nMax Calories</string>
    <string name="eaten">Eaten</string>
    <string name="no_food_error">No food is found</string>
    <string name="calories_budget">Calories Budget</string>
    <string name="check_history_here">Check History Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_edit">Edit</string>
    <string name="text_add">Add</string>
    <string name="less_password">"Password is less than 6"</string>
    <string name="invalid_email">"Invalid Email or Username"</string>
    <string name="confirm_username_equal">"Confirm username is not equal"</string>


</resources>