<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/box_text_size"
        android:textColor="@color/link_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/logout"
        android:textSize="@dimen/padding_halves_sp"
        />

    <TextView
        android:id="@+id/text_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/box_text_size"
        android:text="@string/admin_panel"
        android:visibility="gone"
        android:textColor="@color/link_blue"
        tools:visibility="visible"
        android:textSize="@dimen/padding_halves_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:text="@string/eaten"
        android:textColor="@color/link_blue"
        android:textSize="@dimen/box_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_8"
        android:visibility="gone"
        tools:visibility="visible"
        tools:listitem="@layout/food_item_raw"
        android:background="@color/faded_rose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_history" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/space_80"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/no_food_error"
        android:textColor="@color/grey_500"
        android:textSize="@dimen/text_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_history" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/space_16"
        android:contentDescription="@string/submit"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_eaten_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/text_0"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/box_text_size"
        app:layout_constraintEnd_toEndOf="@+id/text_sample"
        app:layout_constraintStart_toStartOf="@+id/text_sample"
        app:layout_constraintTop_toBottomOf="@+id/text_sample" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/calories_budget"
        android:textColor="@color/link_blue"
        android:textSize="@dimen/box_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_sample" />

    <TextView
        android:id="@+id/tv_max_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_0"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/box_text_size"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="@dimen/space_150"
        android:layout_height="@dimen/space_150"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/text_sample"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="@string/check_history_here"
        android:textSize="@dimen/box_text_size"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_eaten_calories" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>