<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/box_text_size"
        android:text="@string/back"
        android:textColor="@color/link_blue"
        android:textSize="@dimen/padding_halves_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameContainer"
        android:layout_width="@dimen/space_300"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_32"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmUserNameContainer"
        android:layout_width="@dimen/space_300"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_32"
        android:hint="@string/confirm_username"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmUserNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPasswordInputContainer"
        android:layout_width="@dimen/space_300"
        android:layout_height="@dimen/space_50"
        android:layout_marginTop="@dimen/space_32"
        android:hint="@string/password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmUserNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUserPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/userPasswordInputContainer"
        app:layout_constraintStart_toStartOf="@+id/userPasswordInputContainer"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordInputContainer" />

    <TextView
        android:id="@+id/text_already_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/already_have_account"
        android:textAllCaps="false"

        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/signInTextView"
        app:layout_constraintStart_toStartOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/reg_button" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_68"
        android:text="@string/sign_in"
        android:onClick="goToSignIn"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_16"
        app:layout_constraintEnd_toEndOf="@+id/reg_button"
        app:layout_constraintTop_toBottomOf="@+id/reg_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>