<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.calorietrackerfullstack.ui.main.admin.ReportsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/box_text_size"
            android:text="@string/back"
            android:textColor="@color/link_blue"
            android:textSize="@dimen/padding_halves_sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/box_text_size"
            android:text="@string/admin_report"
            android:textColor="@color/link_blue"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_back"  />


        <Button
            android:id="@+id/btn_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default_dp"
            android:text="Number of Added Entries on last 7 days"
            android:textAllCaps="false"
            android:background="@drawable/login_btn_bg"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"  />


        <Button
            android:id="@+id/btn_week_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:background="@drawable/login_btn_bg"
            android:text="@string/number_of_added_entries_week_before"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_week_value"   />

        <TextView
            android:id="@+id/tv_week_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_24"
            android:layout_marginBottom="32dp"
            android:text="@string/text_100"
            android:textColor="@color/link_blue"
            android:visibility="gone"
            tools:visibility="visible"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintEnd_toEndOf="@+id/btn_week"
            app:layout_constraintStart_toStartOf="@id/btn_week"
            app:layout_constraintTop_toBottomOf="@+id/btn_week" />

        <TextView
            android:id="@+id/tv_week_before_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_24"
            android:text="@string/text_0"
            android:textColor="@color/link_blue"
            android:visibility="gone"
            tools:visibility="visible"
            android:textSize="@dimen/box_text_size"
            app:layout_constraintEnd_toEndOf="@+id/btn_week_before"
            app:layout_constraintStart_toStartOf="@+id/btn_week_before"
            app:layout_constraintTop_toBottomOf="@+id/btn_week_before" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>