<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_80">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/space_16"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_16"
                android:padding="@dimen/space_10"
                android:text="@string/sandwich_is_a_good_food_and_we_can_eat_it_well"
                android:textColor="#000"
                app:layout_constraintEnd_toStartOf="@+id/tv_calories"
                app:layout_constraintStart_toEndOf="@+id/img_food"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginEnd="@dimen/space_8"
                android:padding="@dimen/space_10"
                android:text="@string/sample_text"
                android:ellipsize="end"
                android:minEms="5"
                android:maxEms="5"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="@dimen/space_100"
                android:layout_height="@dimen/space_100"
                android:layout_marginStart="@dimen/space_8"
                android:layout_marginTop="@dimen/space_8"
                android:layout_marginBottom="@dimen/space_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_photo_24" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginBottom="@dimen/space_8"
                android:text="@string/date_sample"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_food" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/time_sample"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

